# Fit-Ready-IQ

./: .dockerignore  .env.example  .gitignore  README.md  azure.yaml  docker-compose.yml  firestore.indexes.json  firestore.rules  storage.rules
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
backend/coverage/: lcov.info
backend/coverage/lcov-report/: index.html
backend/coverage/lcov-report/src/: app.js.html  index.html  server.js.html
backend/coverage/lcov-report/src/config/: index.html  index.js.html
backend/coverage/lcov-report/src/middleware/: auth.js.html  errorHandler.js.html  index.html
backend/coverage/lcov-report/src/models/: FitnessData.js.html  User.js.html  index.html
backend/coverage/lcov-report/src/routes/: auth.js.html  fitness.js.html  gear.js.html  index.html  index.js.html  routes.js.html  score.js.html
backend/coverage/lcov-report/src/services/: corosService.js.html  garminService.js.html  (+5 more)
backend/infrastructure/database/: init.sql
backend/src/: app.js  main.py  server.js
backend/src/config/: index.js  settings.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py
backend/src/domain/interfaces/: __init__.py
backend/src/domain/services/: __init__.py
backend/src/domain/value_objects/: __init__.py
backend/src/infrastructure/api_clients/: __init__.py
backend/src/infrastructure/database/: connection.py  models.py
backend/src/middleware/: auth.js  errorHandler.js
backend/src/models/: FitnessData.js  User.js
backend/src/routes/: auth.js  fitness.js  gear.js  index.js  routes.js  score.js
backend/src/services/: corosService.js  garminService.js  gearService.js  mapsService.js  scoringService.js  stravaService.js
backend/tests/: conftest.py  gearService.test.js  mapsService.test.js  scoringService.test.js  test_main.py
backend/tests/integration/: test_app_endpoints.py
backend/tests/performance/: locustfile.py
backend/tests/unit/: test_connection.py  test_settings.py
(+164 files in other folders)
