[tool.poetry]
name = "fit-ready-iq-backend"
version = "0.1.0"
description = "FastAPI backend for Fit-Ready-IQ adventure readiness platform"
authors = ["Fit-Ready-IQ Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
geoalchemy2 = "^0.14.3"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = ">=0.27.0,<0.28.0"
authlib = "^1.3.0"
redis = "^5.0.1"
slowapi = "^0.1.9"
gpxpy = "^1.6.2"
fitparse = "^1.2.0"
python-weather = "^1.0.0"
geopy = "^2.4.1"
shapely = "^2.0.2"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.0"}
azure-keyvault-secrets = "^4.7.0"
azure-identity = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^5.0.0"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
flake8 = "^7.0.0"
pytest-httpx = "^0.36.2"
faker = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]
